--- a/style.css
+++ b/style.css
@@ -4,10 +4,56 @@ html, body {
   width: 100%;
   margin: 0px;
   position: absolute;
+  padding: 0;
+  margin: 0;
+  background: #ffffff;
 }
 
 /* Tamanho do mapa */
 #mapa {
-  height: 100%; /*80*/
-  width: 100%; /*45*/
+  height: 80%;
+  width: 40%;
+  top: 150px;
+}
+
+/* Barra Superior */
+header {
+  background-color: #66CDAA;
+  position: fixed;
+  width: 100%;
+  height: auto;
+  z-index: 10;
+}
+
+header ul {
+  margin: 15px auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
+header li {
+  color: #FFF;
+  font-family: 'Raleway', sans-serif;
+  font-size: 15px;
+  font-weight: 600;
+  display: inline-block;
+  width: 200px;
+}
+
+/* Posicao dos títulos das páginas */
+.publicacao, .sobre, .mapa {
+  position: absolute;
+  top: 80px;
+}
+
+.publicacao li {
+  font-family: 'Raleway', sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 20px;
+}
+
+h3 {
+  font-family: 'Raleway', sans-serif;
+  text-align: center;
 }
