--- a/style.css
+++ b/style.css
@@ -255,3 +255,69 @@ h3:after {
 .inter img {
   display: inline;
 }
+
+/* Estilo do formulario */
+form {
+  /* centralizando na página */
+  margin: 0 auto;
+  width: 500px;
+  /* bordas do formulário */
+  padding: 1em;
+  border: 1px solid #CCC;
+  border-radius: 1em;
+}
+
+form div + div {
+  margin-top: 1em;
+}
+
+label {
+  /* labels do mesmo tamanho */
+  display: inline-block;
+  width: 90px;
+  text-align: left;
+  font-family: 'Raleway', sans-serif;
+  font-size: 13px;
+}
+
+input, textarea {
+  /* padronização de fonte */
+  font: 1em sans-serif;
+
+  /* mesmo tamanho aos campos de texto */
+  width: 300px;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  /* bordas dos campos de texto */
+  border: 1px solid #999;
+  padding: 0;
+  margin:0;
+  vertical-align: bottom;
+  /* position: relative; */
+  top: -1px;
+  *overflow: hidden;
+}
+
+input:focus, textarea:focus {
+  /* destaque nos elementos ativos */
+  border-color: #000;
+}
+
+.button {
+  /* posicionar os botões para a mesma posição dos campos de texto */
+  padding-left: 90px; /* mesmo tamanho que os elementos do tipo label */
+}
+button {
+  margin-left: .5em;
+}
+textarea {
+  /* Para alinhar corretamente os campos de texto de várias linhas com sua label*/
+  vertical-align: top;
+
+  /* Para dar espaço suficiente para digitar algum texto */
+  height: 5em;
+
+  /* Para permitir aos usuários redimensionarem qualquer textarea verticalmente. Ele não funciona em todos os browsers */
+  resize: vertical;
+}
